--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-router": "^1.131.30",
     "@tanstack/react-router-devtools": "^1.131.30",
+    "axios": "^1.11.0",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@tanstack/router-plugin": "^1.131.30",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
