--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_SECRET_KEY="adbox_!?1_key"
-VITE_BASE_URL="https://api.adboxgh.com"
+VITE_BASE_URL="http://localhost:3001/api/v1"
+VITE_SOCKET_URL="http://localhost:3001"
