--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^5.5.0",
     "react-is": "^19.1.1",
     "recharts": "^3.1.2",
+    "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
