--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "hls.js": "^1.6.12",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -39,6 +40,7 @@
     "@tanstack/router-plugin": "^1.131.30",
     "@types/crypto-js": "^4.2.2",
     "@types/hls.js": "^0.13.3",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
